--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
+# llamazoo
+
+.env
+.idea
+.bin
+
+# llama.cpp
+
+*.o
+*.a
+.DS_Store
+.build/
+.cache/
+.direnv/
+.envrc
+.swiftpm
+.venv
+.vs/
+.vscode/
+
+build/
+build-em/
+build-debug/
+build-release/
+build-static/
+build-cublas/
+build-no-accel/
+build-sanitize-addr/
+build-sanitize-thread/
+
+models/*
+
+/main
+/quantize
+/quantize-stats
+/result
+/perplexity
+/embedding
+/benchmark-matmult
+/vdot
+/Pipfile
+
+build-info.h
+arm_neon.h
+compile_commands.json
+
+__pycache__
+
+zig-out/
+zig-cache/
+
+ppl-*.txt
+
+examples/jeopardy/results.txt
+
 # Prerequisites
 *.d
 
