HUGE llama.cpp update: Metal GPUs + new quantisation options

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ tmp/
 .envrc
 .swiftpm
 .venv
+.clang-tidy
 .vs/
 .vscode/
 
@@ -34,6 +35,7 @@ build-release/
 build-static/
 build-cublas/
 build-opencl/
+build-metal/
 build-no-accel/
 build-sanitize-addr/
 build-sanitize-thread/
@@ -50,6 +52,7 @@ models/*
 /benchmark-matmult
 /vdot
 /Pipfile
+/libllama.so
 
 build-info.h
 arm_neon.h
