--- a/config.sample.json
+++ b/config.sample.json
@@ -1,15 +1,16 @@
 {
-    
     "id": "mac-m1-pro",
     "host": "localhost",
     "port": "8080",
     "mode": "prod",
     "pods": 3,
-    "threads": [ 8, 6, 2 ],
+    "threads": [ 2, 8, 4 ],
+    "gpus": [ 0, 0, 0 ],
+    "gpuLayers": [ 100, 0, 0 ],
     "avx": false,
     "neon": true,
     "cuda": false,
-    "default": "airoboros-7b",
+    "defaultModel": "airoboros-7b",
 
     "models": [
 
