--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -29,13 +29,14 @@ models:
     suffix: "ASSISTANT:"
     contextsize: 1024
     predict: 512
-    temp: 0.80
-    topk: 40
-    topp: 0.92
-    repeatpenalty: 1.10
-    mirostat: 0
-    mirostattau: 0
-    mirostateta: 0
+    temp: 0.1
+    topk: 10
+    topp: 0.5
+    repeatpenalty: 1.1
+    repeatlastn: -1
+    mirostat: 2
+    mirostattau: 0.1
+    mirostateta: 0.1
 
   -
     id: airoboros-7b-creative
@@ -49,6 +50,7 @@ models:
     topk: 0
     topp: 0
     repeatpenalty: 1.10
+    repeatlastn: -1
     mirostat: 2
     mirostattau: 1
     mirostateta: 0.1       
@@ -67,6 +69,7 @@ models:
     topk: 40
     topp: 0.92
     repeatpenalty: 1.10
+    repeatlastn: -1
     mirostat: 0
     mirostattau: 0
     mirostateta: 0
@@ -83,6 +86,7 @@ models:
     topk: 8
     topp: 0.92
     repeatpenalty: 1.10
+    repeatlastn: -1
     mirostat: 0
     mirostattau: 0
     mirostateta: 0
