--- a/config.sample.json
+++ b/config.sample.json
@@ -10,6 +10,8 @@
     "deadline": 180,
     "numa": 0,
     "lowVRAM": 0,
+    "sessions": "/home/sessions",
+    "maxSessions": 100,
 
     "modes": {
         "default": "airoboros-13b",
