draft tensor split and GQA

--- a/config.sample.json
+++ b/config.sample.json
@@ -4,8 +4,7 @@
     "port": "8080",
     "pods": 3,
     "threads": [ 2, 8, 4 ],
-    "gpus": [ 0, 0, 0 ],
-    "gpuLayers": [ 100, 0, 0 ],
+    "gpus": [ [ 50, 50 ], [ 0, 0 ], [ 0, 0 ] ],
     "log": "llamazoo.log",
     "deadline": 180,
     "numa": 0,
@@ -25,6 +24,7 @@
             "id": "airoboros-7b",
             "name": "Airoboros 7B",
             "path": "~/models/7B/airoboros-7b-ggml-q4_0.bin",
+            "gqa": 0,
             "preamble": "",
             "prefix": "USER:",
             "suffix": "ASSISTANT:",
@@ -44,6 +44,7 @@
             "id": "wizard-7b",
             "name": "WizardLM 7B",
             "path": "~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin",
+            "gqa": 0,
             "preamble": "",
             "prefix": "### Instruction:",
             "suffix": "### Response:",
