--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -4,9 +4,8 @@ id: "mac-m1-pro"
 host: localhost
 port: 8080
 pods: 3
-threads: [ 2, 8, 4 ]
-gpus: [ 0, 0, 0 ]
-gpulayers: [ 100, 0, 0 ]
+threads: [ 1, 8, 4 ]
+gpus: [ [ 50, 50 ], [ 0, 0 ], [ 0, 0 ] ]
 log: llamazoo.log
 deadline: 180
 numa: 0
@@ -28,6 +27,7 @@ models:
     id: airoboros-7b
     name: Airoboros 7B
     path: ~/models/7B/airoboros-7b-ggml-q4_0.bin
+    gqa: 0
     preamble:
     prefix: "USER:"
     suffix: "ASSISTANT:"
@@ -46,6 +46,7 @@ models:
     id: wizard-7b
     name: WizardLM 7B
     path: ~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin
+    gqa: 0
     preamble:
     prefix: "### Instruction:"
     suffix: "### Response:"
