--- a/llamazoo.service
+++ b/llamazoo.service
@@ -1,13 +1,14 @@
 # LLaMAZoo as Daemon
 
-# -- 1] place script to /etc/systemd/system, then execute commands
+# -- 1. Copy llamazoo executable and config.yaml to /home
 
-# sudo systemctl daemon-reload
-# sudo systemctl enable llamazoo
+# -- 2. Place this file to /etc/systemd/system, then execute commands
 
-# -- 2] check /var/log/syslog for errors
+# sudo systemctl daemon-reload && sudo systemctl enable llamazoo
 
-# -- 3] use these commands for service control
+# -- 3. Check /var/log/syslog for errors
+
+# -- 4. Use these commands for service control
 
 # sudo systemctl start llamazoo
 # sudo systemctl stop llamazoo
@@ -19,8 +20,8 @@ Description=LLaMAZoo
 [Service]
 
 PIDFile=/var/run/llamazoo.pid
-WorkingDirectory=/home/git/llamazoo
-ExecStart=/home/git/llamazoo/llamazoo --server >/dev/null 2>&1 &
+WorkingDirectory=/home
+ExecStart=/home/llamazoo --server >/dev/null 2>&1 &
 # Send a termination signal to the service. SIGTERM (15) is the default:
 ExecStop=systemctl kill llamazoo >/dev/null 2>&1 &
 
