--- a/config.sample.json
+++ b/config.sample.json
@@ -2,9 +2,6 @@
     "id": "mac-m1-pro",
     "host": "localhost",
     "port": "8080",
-    "pods": 3,
-    "threads": [ 2, 8, 4 ],
-    "gpus": [ [ 50, 50 ], [ 0, 0 ], [ 0, 0 ] ],
     "log": "llamazoo.log",
     "deadline": 180,
     "numa": 0,
@@ -12,16 +9,28 @@
     "sessions": "/home/sessions",
     "maxSessions": 100,
 
-    "modes": {
-        "default": "airoboros-13b",
-        "fast": "wizardlm-7b"
+    "pods": [
 
-    },
+        {
+            "threads": 6,
+            "gpus": [ 0, 0],
+            "model": "wizard",
+            "mode": ""
+        },
+
+        {
+            "threads": 1,
+            "gpus": [ 50, 50],
+            "model": "airoboros",
+            "mode": ""
+        }
+
+    ],
 
     "models": [
 
         {
-            "id": "airoboros-7b",
+            "id": "airoboros",
             "name": "Airoboros 7B",
             "path": "~/models/7B/airoboros-7b-ggml-q4_0.bin",
             "gqa": 1,
@@ -41,7 +50,7 @@
         },
 
         {
-            "id": "wizard-7b",
+            "id": "wizard",
             "name": "WizardLM 7B",
             "path": "~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin",
             "gqa": 1,
