--- a/config.sample.json
+++ b/config.sample.json
@@ -44,8 +44,9 @@
             "repeatPenalty": 1.1,
             "repeatLastN": -1,
             "mirostat": 0,
-            "mirostatTAU": 0,
-            "mirostatETA": 0
+            "mirostatENT": 0,
+            "mirostatLR": 0,
+            "yanus": 0
         },
 
         {
@@ -65,7 +66,8 @@
             "repeatLastN": -1,
             "mirostat": 0,
             "mirostatENT": 0,
-            "mirostatLR": 0
+            "mirostatLR": 0,
+            "yanus": 0
         }
     ]
 }
