--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -44,7 +44,8 @@ models:
     repeatlastn: -1
     mirostat: 2
     mirostattau: 0.1
-    mirostateta: 0.1      
+    mirostateta: 0.1     
+    yanus: 0
 
   -
     id: wizard
@@ -64,3 +65,4 @@ models:
     mirostat: 0
     mirostatent: 0
     mirostatlr: 0
+    yanus: 0
