--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -5,8 +5,6 @@ host: localhost
 port: 8080
 log: llamazoo.log
 deadline: 180
-numa: 0
-lowvram: 0
 sessions: "/home/sessions"
 
 # --- pods
@@ -15,13 +13,11 @@ sessions: "/home/sessions"
     threads: 6
     gpus: [ 0, 0 ]
     model: wizard
-    mode:
 
   -
     threads: 1
     gpus: [ 50, 50 ]
     model: airoboros
-    mode:
 
 # --- models
 
@@ -45,7 +41,7 @@ models:
     mirostat: 2
     mirostattau: 0.1
     mirostateta: 0.1     
-    yanus: 0
+    janus: 0
 
   -
     id: wizard
@@ -65,4 +61,4 @@ models:
     mirostat: 0
     mirostatent: 0
     mirostatlr: 0
-    yanus: 0
+    janus: 0
