--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -27,11 +27,20 @@ models:
     id: airoboros
     name: Airoboros 7B
     path: ~/models/7B/airoboros-7b-ggml-q4_0.bin
+
     preamble:
     prefix: "USER:"
     suffix: "ASSISTANT:"
+
     contextsize: 2048
     predict: 1024
+
+    janus: 1
+    depth: 200
+    penalty: 0.936
+    hip: 0.982
+    lop: 0.948
+
     temp: 0.1
     topk: 8
     topp: 0.4
@@ -41,17 +50,25 @@ models:
     mirostat: 2
     mirostattau: 0.1
     mirostateta: 0.1     
-    janus: 0
 
   -
     id: wizard
     name: WizardLM 7B
     path: ~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin
+
     preamble:
     prefix: "### Instruction:"
     suffix: "### Response:"
+
     contextsize: 2048
     predict: 1024
+
+    janus: 1
+    depth: 200
+    penalty: 0.936
+    hip: 0.982
+    lop: 0.948
+
     temp: 0.1
     topk: 8
     topp: 0.4
@@ -61,4 +78,3 @@ models:
     mirostat: 0
     mirostatent: 0
     mirostatlr: 0
-    janus: 0
