--- a/config.sample.json
+++ b/config.sample.json
@@ -38,9 +38,9 @@
 
             "janus": 1,
             "depth": 200,
-            "penalty": 0.936,
-            "hip": 0.982,
-            "lop": 0.948,
+            "scale": 0.936,
+            "hi": 0.982,
+            "lo": 0.948,
 
             "temp": 0.1,
             "topK": 8,
@@ -67,9 +67,9 @@
 
             "janus": 1,
             "depth": 200,
-            "penalty": 0.936,
-            "hip": 0.982,
-            "lop": 0.948,
+            "scale": 0.936,
+            "hi": 0.982,
+            "lo": 0.948,
 
             "temp": 0.1,
             "topK": 8,
