--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -37,9 +37,9 @@ models:
 
     janus: 1
     depth: 200
-    penalty: 0.936
-    hip: 0.982
-    lop: 0.948
+    scale: 0.936
+    hi: 0.982
+    lo: 0.948
 
     temp: 0.1
     topk: 8
@@ -65,9 +65,9 @@ models:
 
     janus: 1
     depth: 200
-    penalty: 0.936
-    hip: 0.982
-    lop: 0.948
+    scale: 0.936
+    hi: 0.982
+    lo: 0.948
 
     temp: 0.1
     topk: 8
