--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ sessions/
 *.gcno
 *.gcda
 *.dot
+*.metallib
 .DS_Store
 .build/
 .cache/
@@ -73,6 +74,7 @@ models-mnt
 /server
 /simple
 /batched
+/batched-bench
 /export-lora
 /finetune
 /speculative
