--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -13,11 +13,13 @@ sessions: "/home/sessions"
     threads: 6
     gpus: [ 0, 0 ]
     model: wizard
+    batchsize: 512
 
   -
     threads: 1
     gpus: [ 50, 50 ]
     model: airoboros
+    batchsize: 512
 
 # --- models
 
