--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -27,6 +27,7 @@ models:
     id: airoboros
     name: Airoboros 7B
     path: ~/models/7B/airoboros-7b-ggml-q4_0.bin
+    locale: en_US
 
     preamble:
     prefix: "USER:"
@@ -55,6 +56,7 @@ models:
     id: wizard
     name: WizardLM 7B
     path: ~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin
+    locale: en_US
 
     preamble:
     prefix: "### Instruction:"
