--- a/config.sample.json
+++ b/config.sample.json
@@ -28,6 +28,7 @@
             "id": "airoboros",
             "name": "Airoboros 7B",
             "path": "~/models/7B/airoboros-7b-ggml-q4_0.bin",
+            "locale": "en_US",
 
             "preamble": "",
             "prefix": "USER:",
@@ -57,6 +58,7 @@
             "id": "wizard",
             "name": "WizardLM 7B",
             "path": "~/models/7B/wizardLM-7B.ggmlv3.q4_0.bin",
+            "locale": "en_US",
 
             "preamble": "",
             "prefix": "### Instruction:",
