--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -5,21 +5,21 @@ host: localhost
 port: 8080
 log: llamazoo.log
 deadline: 180
-sessions: "/home/sessions"
+swap: "/home/sessions"
 debug:
 
 # --- pods
 
   -
+    model: wizard
     threads: 6
     gpus: [ 0, 0 ]
-    model: wizard
     batchsize: 512
 
   -
+    model: airoboros
     threads: 1
     gpus: [ 50, 50 ]
-    model: airoboros
     batchsize: 512
 
 # --- models
