--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# llamazoo
+# collider
 
 .env
 .idea
@@ -10,6 +10,7 @@ config.yaml
 !config.sample.json
 !config.sample.yaml
 __debug_bin
+collider
 llamazoo
 vendor/
 tmp/
