--- a/config.sample.yaml
+++ b/config.sample.yaml
@@ -1,9 +1,9 @@
 # -- settings
 
-id: mac-m1-pro
+id: mac
 host: localhost
 port: 8080
-log: collider.log
+log: booster.log
 deadline: 180
 swap: /home/sessions
 debug:
@@ -25,9 +25,9 @@ pods:
 models:
 
   default:
-    name: Airoboros 7B
-    path: ~/models/7B/airoboros-7b-ggml-q4_0.bin
-    contextsize: 4096
+    name: Hermes 8B
+    path: ~/models/Hermes-2-Pro-Llama-3-8B-Q4_K_M.gguf
+    contextsize: 8192
     predict: 1024
 
 # -- prompts
@@ -36,16 +36,11 @@ prompts:
 
   default:
     locale: en_US
-
-    # -- new format
-    system: "### System:\n\nToday is {DATE}. {SYSTEM}"
-    user: "\n\n### User:\n\n{USER}"
-    assistant: "\n\n### Assistant:\n\n{ASSISTANT}"    
-
-    # -- older format
-    preamble:
-    prefix: "USER:"
-    suffix: "ASSISTANT:"
+    system: "Today is {DATE}. You are virtual assistant."
+    templates:
+      system: "<|im_start|>system\n{SYSTEM}<|im_end|>"
+      user: "\n<|im_start|>user\n{USER}<|im_end|>"
+      assistant: "\n<|im_start|>assistant\n{ASSISTANT}<|im_end|>"
 
 # -- samplings
 
